--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Menú</title>
+  <meta charset="UTF-8">
+  <title>Menú Principal</title>
+  <!-- Incluir Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
+<div class="container">
+  <h1 class="text-center my-4">Menú Principal</h1>
 
-<h1>Estas son las opciones</h1>
-  <ul>
-    <li>
-      <a href="/usuario/crear">Registrar nuevo usuario</a>
-    </li>
+  <!-- Menú de opciones para el usuario -->
+  <nav class="d-flex justify-content-center">
+    <ul class="list-group">
 
-    <li>
-      <a href="/doctor/lista">Ver lista de doctores</a>
-    </li>
-
-    <li>
-      <a href="/paciente/lista">Ver lista de pacientes</a>
-    </li>
-  </ul>
+      <li class="list-group-item">
+        <a href="/usuario/crear" class="btn btn-success btn-lg w-100">Registrar Nuevo Usuario</a>
+      </li>
 
 
+      <li class="list-group-item mt-2">
+        <a href="/doctor/lista" class="btn btn-info btn-lg w-100">Ver Lista de Doctores</a>
+      </li>
+
+
+      <li class="list-group-item mt-2">
+        <a href="/paciente/lista" class="btn btn-info btn-lg w-100">Ver Lista de Pacientes</a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
