--- a/src/main/resources/templates/registro-usuario.html
+++ b/src/main/resources/templates/registro-usuario.html
@@ -3,32 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Formulario de registro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Regístrate</h1>
+<body class="bg-light">
+<div class="container">
+  <h1 class="text-center my-4">Regístrate</h1>
 
-  <form th:action="@{/usuario/crear}" th:object="${usuario}" method="post">
-    <label id="nombre">Nombre:</label>
-    <input type="text" th:field="*{nombre}" required>
+  <form th:action="@{/usuario/crear}" th:object="${usuario}" method="post" class="w-50 mx-auto border p-4 rounded shadow-sm bg-white">
 
-      <label id="apellido">Apellido:</label>
-      <input type="text" th:field="*{apellido}" required>
+      <div class="mb-3">
+          <label id="nombre" class="form-label">Nombre:</label>
+          <input type="text" th:field="*{nombre}" class="form-control"  required>
+      </div>
 
-      <label id="email">Correo:</label>
-      <input type="email" th:field="*{email}" required>
+      <div class="mb-3">
+          <label id="apellido" class="form-label">Apellido:</label>
+          <input type="text" th:field="*{apellido}" class="form-control" required>
+      </div>
 
-      <label id="password">Password:</label>
-      <input type="password" th:field="*{password}" required>
+      <div class="mb-3">
+          <label id="email" class="form-label">Correo:</label>
+          <input type="email" th:field="*{email}" class="form-control" required>
+      </div>
 
-      <label for="tipo">Selecciona el tipo de usuario</label>
-      <select id="tipo" th:field="*{tipoUsuario}" required>
-          <option value="" disabled selected>Selecciona entre los siguientes</option>
-          <option th:each="tipo : ${tiposUsuario}" th:text="${tipo}" th:value="${tipo}"></option>
-      </select>
+      <div class="mb-3">
+          <label id="password" class="form-label">Password:</label>
+          <input type="password" th:field="*{password}" class="form-control" required>
+      </div>
 
-      <button type="submit">Registrar</button>
+      <div class="mb-3">
+          <label for="tipo" class="form-label">Selecciona el tipo de usuario</label>
+          <select id="tipo" th:field="*{tipoUsuario}" class="form-select" required>
+              <option value="" disabled selected>Selecciona entre los siguientes</option>
+              <option th:each="tipo : ${tiposUsuario}" th:text="${tipo}" th:value="${tipo}"></option>
+          </select>
+      </div>
+
+      <div class="text-center">
+        <button type="submit">Registrar</button>
+      </div>
 
   </form>
+</div>
 
 </body>
 </html>
