--- a/src/main/resources/templates/registro-paciente.html
+++ b/src/main/resources/templates/registro-paciente.html
@@ -13,8 +13,8 @@
     <input type="hidden" th:field="*{usuario.id}" />
 
     <div class="mb-3">
-      <label for="direccion" class="form-label">Motivo de consulta:</label>
-      <input type="text" id="direccion" th:field="*{motivoConsulta}" class="form-control" required/>
+      <label for="motivoConsulta" class="form-label">Motivo de consulta:</label>
+      <input type="text" id="motivoConsulta" th:field="*{motivoConsulta}" class="form-control" required/>
     </div>
 
 
