--- a/src/main/resources/templates/lista-pacientes.html
+++ b/src/main/resources/templates/lista-pacientes.html
@@ -16,7 +16,7 @@
       <tr>
         <th>Nombre</th>
         <th>Email</th>
-        <th>Dirección</th>
+        <th>Motivo Consulta</th>
       </tr>
       </thead>
       <tbody>
@@ -25,7 +25,7 @@
       <tr th:each="paciente : ${pacientes}">
         <td th:text="${paciente.usuario.nombre}">Nombre del Paciente</td>
         <td th:text="${paciente.usuario.email}">Email del Paciente</td>
-        <td th:text="${paciente.direccion}">Dirección</td>
+        <td th:text="${paciente.motivoConsulta}">Motivo Consulta</td>
       </tr>
       </tbody>
     </table>
